(Fix) code python

--- a/independent-component-analysis/python/ica-notebook.ipynb
+++ b/independent-component-analysis/python/ica-notebook.ipynb
@@ -215,39 +215,37 @@
    "source": [
     "def logcosh(y, alpha=1.0):\n",
     "    \"\"\"Hàm logcosh\n",
-    "    \n",
+    "\n",
     "    G(y) = 1/alpha * log(cosh(alpha y))\n",
     "    g(y) = tanh(alpha * y)\n",
     "    g'(y) = alpha ( 1 - tanh^2(alpha * y))\n",
-    "    \n",
+    "\n",
     "    :param y: np.array - p dòng với n cột\n",
-    "    \n",
+    "\n",
     "    :return gy: g(y) - shape (p, n)\n",
     "    :return g_y: g'(y) - shape (p, )\n",
     "    \"\"\"\n",
     "    y = alpha * y\n",
     "    gy = np.tanh(y)\n",
     "    g_y = alpha * (1 - gy*gy)\n",
-    "    g_y = g_y.mean(axis=1)\n",
     "    return gy, g_y\n",
     "\n",
     "\n",
     "def exp(y):\n",
     "    \"\"\"Hàm exp\n",
-    "        \n",
-    "    G(y) = -exp[(-y^2) / 2] \n",
-    "    g(y) = y exp[(-y^2) / 2] \n",
-    "    g'(y) = (1-y^2) exp[(-y^2) / 2] \n",
-    "    \n",
+    "\n",
+    "    G(y) = -exp[(-y^2) / 2]\n",
+    "    g(y) = y exp[(-y^2) / 2]\n",
+    "    g'(y) = (1-y^2) exp[(-y^2) / 2]\n",
+    "\n",
     "    :param y: np.array - p dòng với n cột\n",
-    "    \n",
+    "\n",
     "    :return gy: g(y) - shape (p, n)\n",
     "    :return g_y: g'(y) - shape (p, )\n",
     "    \"\"\"\n",
     "    exp = np.exp(-(y ** 2) / 2)\n",
     "    gy = y * exp\n",
     "    g_y = (1 - y ** 2) * exp\n",
-    "    g_y = g_y.mean(axis=1)\n",
     "    return gy, g_y"
    ]
   },
@@ -260,32 +258,32 @@
     "def fastica_oneunit(X, g_func=logcosh, tolerance=1e-5, max_iter=1000):\n",
     "    \"\"\" FastICA cho một thành phần độc lập\n",
     "    (tính toán vectorize)\n",
-    "    \n",
+    "\n",
     "    :param X: np.array - n dòng với p cột\n",
     "    :param g_func: function - hàm trả về g & g'\n",
     "    :param tolerance: float - dung sai cho phép\n",
     "    :param max_iter: số vòng lặp tối đa\n",
-    "    \n",
+    "\n",
     "    :return w: np.array - shape (1, p)\n",
     "    \"\"\"\n",
     "    # m: số lượng mẫu, p: số lượng chiều\n",
     "    m = X.shape[0]\n",
     "    p = X.shape[1]\n",
-    "    \n",
+    "\n",
     "    # tạo ngẫu nhiên vector w\n",
     "    w = np.random.normal(size=(1, p))\n",
-    "    \n",
+    "\n",
     "    for i in range(max_iter):\n",
     "        wtx = w @ X.T\n",
     "        gwtx, g_wtx = g_func(wtx)\n",
-    "        \n",
-    "        w_new = gwtx @ X / float(m) - g_wtx * w\n",
+    "\n",
+    "        w_new = gwtx @ X / float(m) - g_wtx.mean(axis=1) * w\n",
     "        w_new = w_new / np.linalg.norm(w_new)\n",
-    "        \n",
+    "\n",
     "        epsilon = np.linalg.norm(w_new @ w.T - 1)\n",
-    "        \n",
+    "\n",
     "        w = w_new\n",
-    "        \n",
+    "\n",
     "        if epsilon < tolerance:\n",
     "            break\n",
     "    return w"
@@ -404,7 +402,7 @@
    "source": [
     "def symetric_orthogonalization(W):\n",
     "    \"\"\" Trực giao hóa đối xứng (xóa tương quan)\n",
-    "    \n",
+    "\n",
     "    :param W: np.array - p dòng với p cột\n",
     "    :return W: np.array - p dòng với p cột\n",
     "    \"\"\"\n",
@@ -415,35 +413,35 @@
     "\n",
     "def fastica_symetric(X, g_func=logcosh, tolerance=1e-04, max_iter=1000):\n",
     "    \"\"\" FastICA cho nhiều thành phần\n",
-    "    Parallel FastICA - dùng trực giao đối xứng \n",
-    "    \n",
+    "    Parallel FastICA - dùng trực giao đối xứng\n",
+    "\n",
     "    :param X: np.array - n dòng với p cột\n",
     "    :param g_func: function - hàm trả về g & g'\n",
     "    :param tolerance: float - dung sai cho phép\n",
     "    :param max_iter: số vòng lặp tối đa\n",
-    "    \n",
+    "\n",
     "    :return W: np.array - shape (p, p) với mỗi hàng là w_i\n",
     "    \"\"\"\n",
     "    m = float(X.shape[0])\n",
     "    p = X.shape[1]\n",
-    "    \n",
+    "\n",
     "    # Tạo ngẫu nhiên\n",
     "    W = np.asarray(np.random.normal(size=(p, p)))\n",
-    "    \n",
+    "\n",
     "    # Trực giao hóa\n",
     "    W = symetric_orthogonalization(W)\n",
-    "    \n",
+    "\n",
     "    for i in range(max_iter):\n",
     "        wxt = W @ X.T\n",
     "        gwtx, g_wtx = g_func(wxt)\n",
-    "        \n",
-    "        W_new = (gwtx @ X) / float(m) - g_wtx.reshape(p, 1) * W\n",
+    "\n",
+    "        W_new = (gwtx @ X) / float(m) - g_wtx.mean(axis=1).reshape(p, 1) * W\n",
     "        W_new = symetric_orthogonalization(W_new)\n",
-    "        \n",
+    "\n",
     "        epsilon = float(np.max(np.abs(np.abs(np.diag(W_new @ W.T)) - 1)))\n",
-    "        \n",
+    "\n",
     "        W = W_new\n",
-    "        \n",
+    "\n",
     "        if epsilon < tolerance:\n",
     "            break\n",
     "\n",
