DPMM mã nguồn rõ ràng hơn
Mã nguồn rõ ràng hơn.

--- a/dirichlet-process-mixture-model/python3/dp-gmm.ipynb
+++ b/dirichlet-process-mixture-model/python3/dp-gmm.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Phần cài đặt phân bố Gaussian (dùng Gaussian-Wishart làm tiên nghiệm cho tham số) cho từng phân bố con trong mô hình trộn.\n",
+    "Phần cài đặt phân bố $p(x_i | \\mathbf{z}_{-i}, \\mathbf{x}_{-i}, z_i = k, \\lambda)$ với dùng phân bố cụm Gaussian (dùng Gaussian-Wishart làm tiên nghiệm cho tham số) cho từng phân bố con trong mô hình trộn.\n",
     "\n",
     "Bạn đọc tham khảo phần chi tiết cài đặt: https://www.stats.ox.ac.uk/~teh/research/notes/GaussianInverseWishart.pdf"
    ]
@@ -145,10 +145,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MultivariateNormal:\n",
+    "class _DPMulNormal:\n",
     "    \"\"\"\n",
-    "    Lớp MultivariateNormal\n",
-    "    Cài đặt phân bố Normal (Gaussian) nhiều chiều\n",
+    "    Lớp _DPMulNormal\n",
+    "    Cài đặt phân bố Normal (Gaussian) nhiều chiều cho mô hình DPMM\n",
     "    (cùng tiên nghiệm liên hợp Gaussian-Wishart conjugate prior)\n",
     "    \"\"\"\n",
     "    def __init__(self, D=2, s0 = 5.0, ss = 0.65):\n",
@@ -291,7 +291,7 @@
     "        z = z_init\n",
     "\n",
     "    # Mỗi cụm là một phân bố Gaussian nhiều chiều\n",
-    "    clusters = [MultivariateNormal() for _ in range(K)]\n",
+    "    clusters = [_DPMulNormal() for _ in range(K)]\n",
     "\n",
     "    # Khởi tạo thêm điểm vào cụm\n",
     "    for i in range(N):\n",
@@ -409,8 +409,8 @@
     "    n_points_cluster = [0] * K\n",
     "\n",
     "    # Mỗi cụm là một phân bố Gaussian nhiều chiều\n",
-    "    clusters = [MultivariateNormal() for _ in range(K)]\n",
-    "    dummy_dist = MultivariateNormal()\n",
+    "    clusters = [_DPMulNormal() for _ in range(K)]\n",
+    "    dummy_dist = _DPMulNormal()\n",
     "\n",
     "\n",
     "    for i in range(N):\n",
@@ -454,7 +454,7 @@
     "\n",
     "            if z_new == len(prob) - 1:\n",
     "                # Thêm cụm mới nếu z rơi vào cụm mới\n",
-    "                clusters.append(MultivariateNormal())\n",
+    "                clusters.append(_DPMulNormal())\n",
     "                n_points_cluster.append(0)\n",
     "\n",
     "            # Thêm điểm vào cụm\n",
