--- a/denoise_diffusion_probabilistic_models/ddpm.ipynb
+++ b/denoise_diffusion_probabilistic_models/ddpm.ipynb
@@ -350,10 +350,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 74.15it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 74.89it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:03<00:00, 75.07it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 74.67it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 74.36it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:03<00:00, 75.39it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 74.52it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████| 300/300 [00:04<00:00, 72.74it/s]\n"
      ]
     }
    ],
@@ -475,13 +475,13 @@
     "    axes[0, idx_axes].legend([\"train\", \"validation\"], loc=\"upper right\")\n",
     "\n",
     "    # Biến đỗi x_0 -> x_t từ tập dữ liệu\n",
-    "    z_dataset = model.forward_process(x_dataset)\n",
+    "    xt = model.forward_process(x_dataset)\n",
     "    axes[1, idx_axes].scatter(x_dataset[:, 0], x_dataset[:, 1], color=\"#5856d6\", s=2)\n",
     "    axes[1, idx_axes].set(\n",
     "        title=\"(1) Tập dữ liệu \" + name + \" $\\mathbf{x}_0$\",\n",
     "        xlabel=\"$\\mathbf{x}_0^{(1)}$\", ylabel=\"$\\mathbf{x}_0^{(1)}$\")\n",
     "\n",
-    "    axes[2, idx_axes].scatter(z_dataset[:, 0], z_dataset[:, 1], color=\"#5856d6\", s=2)\n",
+    "    axes[2, idx_axes].scatter(xt[:, 0], xt[:, 1], color=\"#5856d6\", s=2)\n",
     "    axes[2, idx_axes].set(\n",
     "        title=\"Quá trình tiến $\\mathbf{x}_0$ thành $\\mathbf{x}_T$\",\n",
     "        xlabel=\"$\\mathbf{x}_T^{(0)}$\", ylabel=\"$\\mathbf{x}_T^{(1)}$\")\n",
@@ -489,11 +489,11 @@
     "    axes[2, idx_axes].set_ylim([-3, 3])\n",
     "\n",
     "    # Lấy mẫu epsilon từ N(0, I)\n",
-    "    z_samples = np.random.normal(size=(len(x_dataset), 2))\n",
+    "    eps = np.random.normal(size=(len(x_dataset), 2))\n",
     "    # Biến đổi từ epsilon -> x0\n",
     "    x_samples = model.reverse_process(len(x_dataset))\n",
     "    x_samples = x_samples.detach().numpy()\n",
-    "    axes[3, idx_axes].scatter(z_samples[:, 0], z_samples[:, 1], color=\"#af52de\", s=2)\n",
+    "    axes[3, idx_axes].scatter(eps[:, 0], eps[:, 1], color=\"#af52de\", s=2)\n",
     "    axes[3, idx_axes].set(\n",
     "        title=\"Lấy $\\epsilon$\",\n",
     "        xlabel=\"$\\epsilon^{(0)}$\", ylabel=\"$\\epsilon^{(1)}$\")\n",
